--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <!-- timer content  -->
         <div class="content">
             <div id="timer-counter">
-                <span class="hr"><span class="timer_hours">00</span>h
-            </span>
-                <span class="time_minutes">5</span>m
-                <span class="time_sec">00</span>s
+                <div class="timer-counter-displsy"><span class="hr"><span class="timer_hours">00</span>h
+                </span>
+                    <span class="time_minutes">5</span>m
+                    <span class="time_sec">00</span>s</div>
                 <input type="tel" maxlength="6" placeholder="00 00 00" id="timer-input">
                 <div class="timeline"></div>
             </div>
